Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102201

DragHandler has unexpected behavior when unaccepted button is pressed during drag

    XMLWordPrintable

Details

    • 83bf594fb (dev), 3708f5e5e (6.5)

    Description

      If DragHandler is set to only accept LeftButton, it still handles any other button clicks while the drag is active and that causes the translation to be reset to 0,0 and the active drag to be come canceled.

      To reproduce in attached example:

      • press and drag red rectangle with left button
      • then click right button

      notice that active changed to false, translation to 0,0 and onCanceled was called. If you move the mouse after that, it becomes active again, but releasing the left button emits onCanceled again.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change